resume_url_update

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-resume_url: "Resume.pdf"
+resume_url: "https://github.com/samkj/samkj.github.io/raw/master/Samir_s_CV.pdf"
 author_name: "Samir Kumar"
 url: samkj.github.io
 
