Open the Resume instead of downloading it.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-resume_url: "https://github.com/samkj/samkj.github.io/raw/master/Samir_s_CV.pdf"
+resume_url: "https://drive.google.com/drive/u/0/folders/10Mx9YbkiRxYd7b3YOGZ9BlLEeTDT0RpY"
 author_name: "Samir Kumar"
 url: samkj.github.io
 
