--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-resume_url: "https://drive.google.com/drive/u/0/folders/10Mx9YbkiRxYd7b3YOGZ9BlLEeTDT0RpY"
+resume_url: "https://drive.google.com/file/d/1v5B0V_esmAXPywnyDCiqt3rffOXKkkbS/view?usp=sharing"
 author_name: "Samir Kumar"
 url: samkj.github.io
 
